name:                copenhagen
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/copenhagen#readme
license:             MIT
license-file:        LICENSE
author:              Mulan Szechuan Sauce
maintainer:          example@example.com
copyright:           2020 Mulan Szechuan Sauce
category:            Web
build-type:          Simple
cabal-version:       >=1.10
--extra-source-files:  README.md

executable copenhagen
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, parsec
